--- a/music/index.html
+++ b/music/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link type="text/css" href="jplayer.blue.monday.min.css" rel="stylesheet" />
-  <script type="text/javascript" src="jquery.min.js"></script>
+  <link href="./skin/blue.monday/css/jplayer.blue.monday.min.css" rel="stylesheet" />
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+  <!-- link type="text/javascript" src="://code.jquery.com/jquery-2.1.4.min.js"></script -->
   <script type="text/javascript" src="jquery.jplayer.min.js"></script>
   <script type="text/javascript">
     $(document).ready(function(){
