--- a/music/index.html
+++ b/music/index.html
@@ -5,66 +5,91 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
   <!-- link type="text/javascript" src="://code.jquery.com/jquery-2.1.4.min.js"></script -->
   <script type="text/javascript" src="jquery.jplayer.min.js"></script>
+  <script type="text/javascript" src="jplayer.playlist.min.js"></script>
   <script type="text/javascript">
-    $(document).ready(function(){
-      $("#jquery_jplayer_1").jPlayer({
-        ready: function () {
-          $(this).jPlayer("setMedia", {
-            title: "Bubble",
-            m4a: "http://www.jplayer.org/audio/m4a/Miaow-07-Bubble.m4a",
-            oga: "http://www.jplayer.org/audio/ogg/Miaow-07-Bubble.ogg"
-          });
-        },
-        cssSelectorAncestor: "#jp_container_1",
-        swfPath: "/js",
-        supplied: "m4a, oga",
-        useStateClassSkin: true,
-        autoBlur: false,
-        smoothPlayBar: true,
-        keyEnabled: true,
-        remainingDuration: true,
-        toggleDuration: true
-      });
-    });
+   //<![CDATA[
+$(document).ready(function(){
+	new jPlayerPlaylist({
+		jPlayer: "#jquery_jplayer_1",
+		cssSelectorAncestor: "#jp_container_1"
+	}, [
+		{
+			title:"Track 1",
+			artist:"benji",
+			oga:"https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/audio/music/benji/glportal_gameplay1-full-121215.ogg",
+			poster: "https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/graphics/logo/portal-logo-plain_with_subtitles.png"
+		},
+		{
+			title:"Track 2",
+			artist:"benji",
+			oga:"https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/audio/music/benji/glportal_gameplay2-full-121215.ogg",
+			poster: "https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/graphics/logo/portal-logo-plain_with_subtitles.png"
+		}
+	], {
+		swfPath: "../../dist/jplayer",
+		supplied: "webmv, ogv, m4v, oga, mp3",
+		useStateClassSkin: true,
+		autoBlur: false,
+		smoothPlayBar: true,
+		keyEnabled: true,
+		audioFullScreen: true
+	});
+});
+//]]>
   </script>
 </head>
 <body>
-<div id="jquery_jplayer_1" class="jp-jplayer"></div>
-<div id="jp_container_1" class="jp-audio" role="application" aria-label="media player">
-  <div class="jp-type-single">
-    <div class="jp-gui jp-interface">
-      <div class="jp-controls">
-        <button class="jp-play" role="button" tabindex="0">play</button>
-        <button class="jp-stop" role="button" tabindex="0">stop</button>
-      </div>
-      <div class="jp-progress">
-        <div class="jp-seek-bar">
-          <div class="jp-play-bar"></div>
-        </div>
-      </div>
-      <div class="jp-volume-controls">
-        <button class="jp-mute" role="button" tabindex="0">mute</button>
-        <button class="jp-volume-max" role="button" tabindex="0">max volume</button>
-        <div class="jp-volume-bar">
-          <div class="jp-volume-bar-value"></div>
-        </div>
-      </div>
-      <div class="jp-time-holder">
-        <div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
-        <div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
-        <div class="jp-toggles">
-          <button class="jp-repeat" role="button" tabindex="0">repeat</button>
-        </div>
-      </div>
-    </div>
-    <div class="jp-details">
-      <div class="jp-title" aria-label="title">&nbsp;</div>
-    </div>
-    <div class="jp-no-solution">
-      <span>Update Required</span>
-      To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
-    </div>
-  </div>
+<div id="jp_container_1" class="jp-video jp-video-270p" role="application" aria-label="media player">
+	<div class="jp-type-playlist">
+		<div id="jquery_jplayer_1" class="jp-jplayer"></div>
+		<div class="jp-gui">
+			<div class="jp-video-play">
+				<button class="jp-video-play-icon" role="button" tabindex="0">play</button>
+			</div>
+			<div class="jp-interface">
+				<div class="jp-progress">
+					<div class="jp-seek-bar">
+						<div class="jp-play-bar"></div>
+					</div>
+				</div>
+				<div class="jp-current-time" role="timer" aria-label="time">&nbsp;</div>
+				<div class="jp-duration" role="timer" aria-label="duration">&nbsp;</div>
+				<div class="jp-controls-holder">
+					<div class="jp-controls">
+						<button class="jp-previous" role="button" tabindex="0">previous</button>
+						<button class="jp-play" role="button" tabindex="0">play</button>
+						<button class="jp-next" role="button" tabindex="0">next</button>
+						<button class="jp-stop" role="button" tabindex="0">stop</button>
+					</div>
+					<div class="jp-volume-controls">
+						<button class="jp-mute" role="button" tabindex="0">mute</button>
+						<button class="jp-volume-max" role="button" tabindex="0">max volume</button>
+						<div class="jp-volume-bar">
+							<div class="jp-volume-bar-value"></div>
+						</div>
+					</div>
+					<div class="jp-toggles">
+						<button class="jp-repeat" role="button" tabindex="0">repeat</button>
+						<button class="jp-shuffle" role="button" tabindex="0">shuffle</button>
+						<button class="jp-full-screen" role="button" tabindex="0">full screen</button>
+					</div>
+				</div>
+				<div class="jp-details">
+					<div class="jp-title" aria-label="title">&nbsp;</div>
+				</div>
+			</div>
+		</div>
+		<div class="jp-playlist">
+			<ul>
+				<!-- The method Playlist.displayPlaylist() uses this unordered list -->
+				<li>&nbsp;</li>
+			</ul>
+		</div>
+		<div class="jp-no-solution">
+			<span>Update Required</span>
+			To play the media you will need to either update your browser to a recent version or update your <a href="http://get.adobe.com/flashplayer/" target="_blank">Flash plugin</a>.
+		</div>
+	</div>
 </div>
 </body>
 </html>
