--- a/music/index.html
+++ b/music/index.html
@@ -14,6 +14,12 @@ $(document).ready(function(){
 		cssSelectorAncestor: "#jp_container_1"
 	}, [
 		{
+			title:"Title",
+			artist:"benji",
+			oga:"https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/audio/music/benji/glportal_titletheme-121215.ogg",
+			poster: "https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/graphics/logo/portal-logo-plain_with_subtitles.png"
+		},		
+		{
 			title:"Track 1",
 			artist:"benji",
 			oga:"https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/audio/music/benji/glportal_gameplay1-full-121215.ogg",
@@ -24,7 +30,25 @@ $(document).ready(function(){
 			artist:"benji",
 			oga:"https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/audio/music/benji/glportal_gameplay2-full-121215.ogg",
 			poster: "https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/graphics/logo/portal-logo-plain_with_subtitles.png"
-		}
+		},
+		{
+			title:"Track 3",
+			artist:"benji",
+			oga:"https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/audio/music/benji/glportal_gameplay3-full-121815.ogg",
+			poster: "https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/graphics/logo/portal-logo-plain_with_subtitles.png"
+		},
+		{
+			title:"Track 4",
+			artist:"benji",
+			oga:"https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/audio/music/benji/glportal_gameplay4-mainloop-121915.ogg",
+			poster: "https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/graphics/logo/portal-logo-plain_with_subtitles.png"
+		},
+		{
+			title:"Track 5",
+			artist:"benji",
+			oga:"https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/audio/music/benji/glportal_gameplay5-full-010116.ogg",
+			poster: "https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/graphics/logo/portal-logo-plain_with_subtitles.png"
+		}		
 	], {
 		swfPath: "../../dist/jplayer",
 		supplied: "webmv, ogv, m4v, oga, mp3",
