--- a/music/index.html
+++ b/music/index.html
@@ -48,6 +48,12 @@ $(document).ready(function(){
 			artist:"benji",
 			oga:"https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/audio/music/benji/glportal_gameplay5-full-010116.ogg",
 			poster: "https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/graphics/logo/portal-logo-plain_with_subtitles.png"
+		},
+		{
+			title:"Track 6",
+			artist:"benji",
+			oga:"https://github.com/GlPortal/glportal_raw_data/raw/master/audio/music/benji/glportal_gameplay6-mainloop-020216.ogg",
+			poster: "https://raw.githubusercontent.com/GlPortal/glportal_raw_data/master/graphics/logo/portal-logo-plain_with_subtitles.png"
 		}		
 	], {
 		swfPath: "../../dist/jplayer",
